[package]
name = "roboplc-io-ads"
version = "1.0.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license-file = "LICENSE.md"
description = "RoboPLC I/O connector for TwinCAT/ADS"
repository = "https://github.com/roboplc/roboplc-io-ads"
keywords = ["realtime", "twincat", "ads", "plc", "industrial"]
readme = "README.md"
autoexamples = false

[dependencies]
bma-ts = { version = "0.1.10" }
byteorder = "1.5.0"
itertools = "0.12.1"
oneshot = { version = "0.1.6", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
roboplc = "0.1.48"
tracing = { version = "0.1.40", features = ["log"] }
zerocopy = "0.6"

[dev-dependencies]
once_cell = "1.19.0"

[[example]]
name = "pull"
path = "examples/pull.rs"

[[example]]
name = "notifications"
path = "examples/notifications.rs"
